--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -10,6 +10,8 @@
 
     <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
 
+    <table th:replace="fragments :: table-display"></table>
+
     <!-- TODO #1 - Use a loop to display job results in a table. -->
 
 </div>
